<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yn"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="63dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nm"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="150dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="175dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="231dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="370dp"
        android:layout_height="48dp"
        app:srcCompat="@android:drawable/picture_frame"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg" />

    <ImageView
        android:id="@+id/ImageV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cht" />

    <Button
        android:id="@+id/toolbarPageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Go to toolbar page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</LinearLayout>
